# MyDataTool

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_main_app.py
datatools/: __init__.py  analyzer.py  cleaner.py  loader.py  utils.py
pages/: 0_Overview.py  1_Load_Data.py  2_Explore_Data.py  3_Clean_Data.py  4_Analyze_Distributions.py  5_Feature_vs_Target.py  6_Check_Linearity.py
