[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mydatatool"
version = "0.1.0"
description = "Interactive data exploration tool"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "plotly"
]